<resources>
    <string name="app_name">Blog</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="regbtn">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginbtn">Log In</string>
    <string name="movetosignup">click in image to sign up</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Log Out</string>
    <string name="pop_description">Description</string>
    <string name="pop_title">Title</string>


</resources>
